--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "type": "git",
     "url": "https://github.com/ryansolid/solid-app-router"
   },
-  "main": "lib/solid-app-router.js",
+  "main": "dist/solid-app-router.cjs.js",
   "module": "dist/solid-app-router.js",
   "types": "types/index.d.ts",
   "files": [
     "dist",
-    "lib",
     "types"
   ],
   "sideEffects": "false",
@@ -28,11 +27,11 @@
     "@rollup/plugin-babel": "5.2.1",
     "@rollup/plugin-node-resolve": "9.0.0",
     "rollup": "^2.32.1",
-    "solid-js": "^0.21.5",
-    "babel-preset-solid": "^0.21.3",
+    "solid-js": "^0.22.0",
+    "babel-preset-solid": "^0.22.0",
     "typescript": "~4.0.3"
   },
   "peerDependencies": {
-    "solid-js": "^0.21.5"
+    "solid-js": "^0.22.0"
   }
 }
