--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "emitDeclarationOnly": true,
     "declaration": true,
     "target": "esnext",
     "newLine": "LF",
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
-    "outDir": "./types",
+    "outDir": "./dist",
     "module": "esnext"
   },
   "include": [
