--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Config driven router for SolidJS",
   "author": "Ryan Carniato",
   "license": "MIT",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "homepage": "https://github.com/ryansolid/solid-app-router#readme",
   "repository": {
     "type": "git",
@@ -11,18 +11,28 @@
   },
   "type": "module",
   "main": "dist/index.jsx",
-  "module": "dist/index.jsx",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.jsx",
+    "./cdn": "./dist/solid-app-router.min.js"
+  },
   "files": [
     "dist"
   ],
   "sideEffects": "false",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && rollup -c",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-typescript": "^7.10.4",
+    "@rollup/plugin-babel": "5.2.1",
+    "@rollup/plugin-node-resolve": "9.0.0",
     "@types/node": "^14.14.10",
+    "babel-preset-solid": "^0.22.0",
+    "rollup": "^2.32.1",
+    "rollup-plugin-terser": "^7.0.2",
     "solid-js": "^0.22.0",
     "typescript": "~4.1.2"
   },
