--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Config driven router for SolidJS",
   "author": "Ryan Carniato",
   "license": "MIT",
-  "version": "0.0.37",
+  "version": "0.0.38",
   "homepage": "https://github.com/ryansolid/solid-app-router#readme",
   "repository": {
     "type": "git",
@@ -39,6 +39,6 @@
     "typescript": "~4.1.2"
   },
   "peerDependencies": {
-    "solid-js": "^0.25.0"
+    "solid-js": "*"
   }
 }
