fix: add source entry to package.json

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "source": "./src/index.tsx",
   "sideEffects": false,
   "scripts": {
     "build": "tsc && rollup -c",
