--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Config driven router for SolidJS",
   "author": "Ryan Carniato",
   "license": "MIT",
-  "version": "0.0.46",
+  "version": "0.0.50-rc.0",
   "homepage": "https://github.com/solidjs/solid-app-router#readme",
   "repository": {
     "type": "git",
@@ -32,10 +32,10 @@
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@types/node": "^15.12.4",
-    "babel-preset-solid": "^0.26.5",
+    "babel-preset-solid": "^1.0.0-rc.9",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
-    "solid-js": "^0.26.5",
+    "solid-js": "^1.0.0-rc.9",
     "typescript": "~4.3.4"
   },
   "peerDependencies": {
