--- a/package.json
+++ b/package.json
@@ -24,21 +24,31 @@
   "sideEffects": false,
   "scripts": {
     "build": "tsc && rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest && npm run test:types",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage && npm run test:types",
+    "test:types": "tsc --project tsconfig.test.json"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.0",
+    "@types/jest": "^26.0.16",
     "@types/node": "^15.12.4",
     "babel-preset-solid": "^1.0.0",
+    "jest": "^26.6.3",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
+    "solid-jest": "^0.1.1",
     "solid-js": "^1.0.0",
     "typescript": "~4.3.4"
   },
   "peerDependencies": {
     "solid-js": "^1.0.0"
+  },
+  "jest": {
+    "preset": "solid-jest/preset/browser"
   }
 }
