--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "exports": {
     ".": {
       "solid": "./dist/index.jsx",
+      "development": "./dist/dev.js",
       "default": "./dist/index.js"
     }
   },
@@ -38,6 +39,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.5",
+    "@rollup/plugin-replace": "^3.0.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "babel-preset-solid": "^1.1.0",
