--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test": "jest && npm run test:types",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage && npm run test:types",
-    "test:types": "tsc --project tsconfig.test.json"
+    "test:types": "tsc --project tsconfig.test.json",
+    "pretty": "prettier --write \"{src,test}/**/*.{ts,tsx}\""
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -42,6 +43,7 @@
     "@types/node": "^16.10.3",
     "babel-preset-solid": "^1.1.0",
     "jest": "^27.2.5",
+    "prettier": "^2.5.1",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
     "solid-jest": "^0.2.0",
