--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Ryan Turnquist"
   ],
   "license": "MIT",
-  "version": "0.1.14",
+  "version": "0.2.0",
   "homepage": "https://github.com/solidjs/solid-app-router#readme",
   "repository": {
     "type": "git",
@@ -41,13 +41,13 @@
     "@rollup/plugin-node-resolve": "13.0.5",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
-    "babel-preset-solid": "^1.3.0-rc.2",
+    "babel-preset-solid": "^1.3.0",
     "jest": "^27.2.5",
     "prettier": "^2.5.1",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
     "solid-jest": "^0.2.0",
-    "solid-js": "^1.3.0-rc.2",
+    "solid-js": "^1.3.0",
     "typescript": "^4.5.4"
   },
   "peerDependencies": {
