--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,14 +6,14 @@ body:
       value: |
         Thank you for reporting an issue :pray:.
 
-        This issue tracker is for reporting bugs found in `solid-app-router` (https://github.com/solidjs/solid-app-router).
+        This issue tracker is for reporting bugs found in `solid-router` (https://github.com/solidjs/solid-router).
         If you have a question about how to achieve something and are struggling, please post a question
-        inside of `solid-app-router` Discussions tab: https://github.com/solidjs/solid-app-router/discussions
+        inside of `solid-router` Discussions tab: https://github.com/solidjs/solid-router/discussions
 
         Before submitting a new bug/issue, please check the links below to see if there is a solution or question posted there already:
-         - `solid-app-router` Issues tab: https://github.com/solidjs/solid-app-router/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc
-         - `solid-app-router` closed issues tab: https://github.com/solidjs/solid-app-router/issues?q=is%3Aissue+sort%3Aupdated-desc+is%3Aclosed
-         - `solid-app-router` Discussions tab: https://github.com/solidjs/solid-app-router/discussions
+         - `solid-router` Issues tab: https://github.com/solidjs/solid-router/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc
+         - `solid-router` closed issues tab: https://github.com/solidjs/solid-router/issues?q=is%3Aissue+sort%3Aupdated-desc+is%3Aclosed
+         - `solid-router` Discussions tab: https://github.com/solidjs/solid-router/discussions
 
         The more information you fill in, the better the community can help you.
   - type: textarea
