--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Ryan Turnquist"
   ],
   "license": "MIT",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "homepage": "https://github.com/solidjs/solid-router#readme",
   "repository": {
     "type": "git",
@@ -46,6 +46,7 @@
     "@types/node": "^18.7.14",
     "babel-preset-solid": "^1.5.3",
     "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.1.2",
     "prettier": "^2.7.1",
     "rollup": "^2.79.0",
     "rollup-plugin-terser": "^7.0.2",
