--- a/package.json
+++ b/package.json
@@ -40,19 +40,20 @@
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-typescript": "^7.18.6",
-    "@rollup/plugin-babel": "5.3.1",
-    "@rollup/plugin-node-resolve": "13.3.0",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-terser": "0.2.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
-    "babel-preset-solid": "^1.5.3",
+    "babel-jest": "^29.0.1",
+    "babel-preset-solid": "^1.6.6",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.2.1",
     "prettier": "^2.7.1",
-    "rollup": "^2.79.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^3.7.5",
     "solid-jest": "^0.2.0",
-    "solid-js": "^1.5.3",
-    "typescript": "^4.8.2"
+    "solid-js": "^1.6.6",
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "solid-js": "^1.5.3"
