--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Ryan Turnquist"
   ],
   "license": "MIT",
-  "version": "0.9.1",
+  "version": "0.10.0-beta.9",
   "homepage": "https://github.com/solidjs/solid-router#readme",
   "repository": {
     "type": "git",
@@ -44,19 +44,19 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.2.0",
     "@types/jest": "^29.0.0",
-    "@types/node": "^18.7.14",
+    "@types/node": "^20.9.0",
     "babel-jest": "^29.0.1",
-    "babel-preset-solid": "^1.6.6",
+    "babel-preset-solid": "^1.8.6",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.2.1",
     "prettier": "^2.7.1",
     "rollup": "^3.7.5",
     "solid-jest": "^0.2.0",
-    "solid-js": "^1.8.4",
-    "typescript": "^4.9.4"
+    "solid-js": "^1.8.6",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "solid-js": "^1.8.4"
+    "solid-js": "^1.8.6"
   },
   "jest": {
     "preset": "solid-jest/preset/browser"
