--- a/package.json
+++ b/package.json
@@ -31,34 +31,30 @@
   "scripts": {
     "build": "tsc && rollup -c",
     "prepublishOnly": "npm run build",
-    "test": "jest && npm run test:types",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage && npm run test:types",
+    "test": "vitest run && npm run test:types",
+    "test:watch": "vitest",
     "test:types": "tsc --project tsconfig.test.json",
     "pretty": "prettier --write \"{src,test}/**/*.{ts,tsx}\""
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/preset-typescript": "^7.18.6",
-    "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-terser": "0.2.0",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^20.9.0",
-    "babel-jest": "^29.0.1",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.14",
     "babel-preset-solid": "^1.8.6",
-    "jest": "^29.0.1",
-    "jest-environment-jsdom": "^29.2.1",
-    "prettier": "^2.7.1",
-    "rollup": "^3.7.5",
-    "solid-jest": "^0.2.0",
+    "jsdom": "^24.0.0",
+    "prettier": "^2.7.0",
+    "rollup": "^4.9.6",
     "solid-js": "^1.8.7",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-solid": "^2.9.1",
+    "vitest": "^1.2.2"
   },
   "peerDependencies": {
     "solid-js": "^1.8.6"
-  },
-  "jest": {
-    "preset": "solid-jest/preset/browser"
   }
 }
