--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "module": "esnext",
     "stripInternal": true
   },
-  "include": ["./src"],
+  "include": [
+    "./src"
+  ],
   "exclude": ["node_modules/"]
 }
