build in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+      
+      - name: Build package
+        run: pnpm run build
 
       - name: Run tests
-        run: pnpm test
+        run: pnpm run test
