--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          # https://github.com/pnpm/pnpm/issues/8953
+          version: 9.15.3
 
       - name: Use Node.js from nvmrc
         uses: actions/setup-node@v4
