--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,6 @@
     "outDir": "./dist",
     "module": "esnext"
   },
-  "include": [
-    "./src"
-  ],
+  "include": ["./src", "./test"],
   "exclude": ["node_modules/"]
 }
