--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "outDir": "./dist",
     "module": "esnext"
   },
-  "include": ["./src", "./test"],
+  "include": ["./src"],
   "exclude": ["node_modules/"]
 }
