--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "declaration": true,
     "target": "esnext",
     "newLine": "LF",
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "strict": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
     "outDir": "./dist",
-    "module": "esnext"
+    "module": "NodeNext"
   },
   "include": ["./src"],
   "exclude": ["node_modules/"]
