--- a/.github/workflows/dist-typecheck.yml
+++ b/.github/workflows/dist-typecheck.yml
@@ -1,16 +1,15 @@
-name: Tests
+name: Type Check Distribution
 
 on:
-  workflow_dispatch:
+  pull_request: ~
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  test:
+  typecheck-dist:
+    name: Check dist types
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -26,5 +25,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm run test
+      - name: Build package and dependencies
+        run: pnpm build
+
+      - name: Check types
+        run: pnpx @arethetypeswrong/cli --pack . --profile esm-only
